// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`don't install with file: protocol as default if target is a file 1`] = `
"Error: Found 1 errors.
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\cli\\\\commands\\\\check.js:400:11
    at Generator.next (<anonymous>)
    at step (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\babel-runtime\\\\helpers\\\\asyncToGenerator.js:17:30)
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\babel-runtime\\\\helpers\\\\asyncToGenerator.js:28:13
    at <anonymous> 
Console output:
 [2K[1G[33mwarning[39m package.json: No license field
[2K[1G[33mwarning[39m No license field
[2K[1G[2m[1/4][22m Resolving packages...
[2K[1GCouldn't find any versions for \\"foo\\" that matches \\"bar\\"
[2K[1G[2m[2/4][22m Fetching packages...
[2K[1G[2m[3/4][22m Linking dependencies...
[2K[1G[2m[4/4][22m Building fresh packages...
[2K[1G[33mwarning[39m No license field
[2K[1GCouldn't find any versions for \\"foo\\" that matches \\"bar\\"
[2K[1G[31merror[39m Lockfile does not contain pattern: \\"foo@bar\\"
"
`;

exports[`don't install with file: protocol as default if target is valid semver 1`] = `
"{
  \\"author\\": \\"AJ ONeal <coolaj86@gmail.com> (http://coolaj86.info)\\",
  \\"name\\": \\"foo\\",
  \\"description\\": \\"A test module with no \`main\`, \`lib\`, or \`dependencies\` specified\\",
  \\"version\\": \\"1.0.0\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"git://github.com/coolaj86/node-pakman.git\\"
  },
  \\"engines\\": {
    \\"node\\": \\">= v0.2\\"
  }
}
"
`;

exports[`don't install with implicit file: protocol if target does not have package.json 1`] = `
"Error: Found 1 errors.
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\cli\\\\commands\\\\check.js:400:11
    at Generator.next (<anonymous>)
    at step (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\babel-runtime\\\\helpers\\\\asyncToGenerator.js:17:30)
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\babel-runtime\\\\helpers\\\\asyncToGenerator.js:28:13
    at <anonymous> 
Console output:
 [2K[1G[33mwarning[39m package.json: No license field
[2K[1G[33mwarning[39m No license field
[2K[1G[2m[1/4][22m Resolving packages...
[2K[1GCouldn't find any versions for \\"foo\\" that matches \\"bar\\"
[2K[1G[2m[2/4][22m Fetching packages...
[2K[1G[2m[3/4][22m Linking dependencies...
[2K[1G[2m[4/4][22m Building fresh packages...
[2K[1G[33mwarning[39m No license field
[2K[1GCouldn't find any versions for \\"foo\\" that matches \\"bar\\"
[2K[1G[31merror[39m Lockfile does not contain pattern: \\"foo@bar\\"
"
`;

exports[`install should fail if the only algorithms in the sri are unknown 1`] = `
"Error: Integrity string for undefined does not contain supported algorithms.
    at TarballFetcher.createExtractor (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:96:13)
    at Object.process (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:190:62)
    at RequestManager.execute (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:456:14)
    at RequestManager.shiftQueue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:472:10)
    at Promise (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:245:12)
    at new Promise (<anonymous>)
    at RequestManager.request (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:243:21)
    at NpmRegistry.request (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\registries\\\\npm-registry.js:154:32)
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:177:31
    at Generator.next (<anonymous>) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;

exports[`install should fail to authenticate integrity with correct sha1 and incorrect sha512 1`] = `
"Error: https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz: Fetch succeeded for undefined. However, extracting \\"https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz\\" resulted in the integrity \\"sha512-kKvNJn6Mm93gAczWVJg7wH+wGYWNrDHdWvpUmHyEsgCtIwwo3bqPtV4tR5tuPaUhTOo/kvhVwd8XwwOllGYkbg== sha1-iTMSr2myEj3vcfV4iQAWce6yyFM=\\", which did not match the requested integrity \\"sha512-foo\\".
    at Extract.extractorStream.pipe.on.on (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:124:13)
    at emitNone (events.js:111:20)
    at Extract.emit (events.js:208:7)
    at finishMaybe (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:504:14)
    at afterWrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:386:3)
    at onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:377:7)
    at WritableState.onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:119:5)
    at Extract.Object.<anonymous>.Extract._continue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:208:8)
    at oncontinue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:64:10)
    at Extract.onheader (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:128:7) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;

exports[`install should fail to authenticate on sha1 integrity mismatch 1`] = `
"Error: https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz: Fetch succeeded for undefined. However, extracting \\"https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz\\" resulted in the integrity \\"sha1-iTMSr2myEj3vcfV4iQAWce6yyFM=\\", which did not match the requested integrity \\"sha1-foo\\".
    at Extract.extractorStream.pipe.on.on (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:124:13)
    at emitNone (events.js:111:20)
    at Extract.emit (events.js:208:7)
    at finishMaybe (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:504:14)
    at afterWrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:386:3)
    at onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:377:7)
    at WritableState.onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:119:5)
    at Extract.Object.<anonymous>.Extract._continue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:208:8)
    at oncontinue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:64:10)
    at Extract.onheader (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:128:7) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;

exports[`install should fail to authenticate on sha512 integrity mismatch 1`] = `
"Error: https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz: Fetch succeeded for undefined. However, extracting \\"https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz\\" resulted in the integrity \\"sha512-kKvNJn6Mm93gAczWVJg7wH+wGYWNrDHdWvpUmHyEsgCtIwwo3bqPtV4tR5tuPaUhTOo/kvhVwd8XwwOllGYkbg==\\", which did not match the requested integrity \\"sha512-foo\\".
    at Extract.extractorStream.pipe.on.on (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:124:13)
    at emitNone (events.js:111:20)
    at Extract.emit (events.js:208:7)
    at finishMaybe (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:504:14)
    at afterWrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:386:3)
    at onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:377:7)
    at WritableState.onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:119:5)
    at Extract.Object.<anonymous>.Extract._continue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:208:8)
    at oncontinue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:64:10)
    at Extract.onheader (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:128:7) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;

exports[`install should fail with unsupported algorithms 1`] = `
"Error: Integrity string for undefined does not contain supported algorithms.
    at TarballFetcher.createExtractor (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:96:13)
    at Object.process (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:190:62)
    at RequestManager.execute (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:456:14)
    at RequestManager.shiftQueue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:472:10)
    at Promise (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:245:12)
    at new Promise (<anonymous>)
    at RequestManager.request (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\util\\\\request-manager.js:243:21)
    at NpmRegistry.request (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\registries\\\\npm-registry.js:154:32)
    at C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:177:31
    at Generator.next (<anonymous>) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;

exports[`install should ignore existing hash if integrity is present even if it fails to authenticate it 1`] = `
"Error: https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz: Fetch succeeded for undefined. However, extracting \\"https://registry.yarnpkg.com/safe-buffer/-/safe-buffer-5.1.1.tgz\\" resulted in the integrity \\"sha512-kKvNJn6Mm93gAczWVJg7wH+wGYWNrDHdWvpUmHyEsgCtIwwo3bqPtV4tR5tuPaUhTOo/kvhVwd8XwwOllGYkbg==\\", which did not match the requested integrity \\"sha512-foo\\".
    at Extract.extractorStream.pipe.on.on (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\src\\\\fetchers\\\\tarball-fetcher.js:124:13)
    at emitNone (events.js:111:20)
    at Extract.emit (events.js:208:7)
    at finishMaybe (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:504:14)
    at afterWrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:386:3)
    at onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:377:7)
    at WritableState.onwrite (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\readable-stream\\\\lib\\\\_stream_writable.js:119:5)
    at Extract.Object.<anonymous>.Extract._continue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:208:8)
    at oncontinue (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:64:10)
    at Extract.onheader (C:\\\\Users\\\\byk\\\\Documents\\\\Projects\\\\yarnpkg\\\\yarn\\\\node_modules\\\\tar-stream\\\\extract.js:128:7) 
Console output:
 [2K[1G[2m[1/4][22m Resolving packages...
[2K[1G[2m[2/4][22m Fetching packages...
"
`;
